--- a/index.html
+++ b/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>360 Test Viewer</title>
+<title>360 Viewer</title>
+<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.css">
 <style>
-body { margin:0; overflow:hidden; }
+body {
+    margin:0;
+    overflow:hidden;
+    font-family:'Saira', sans-serif;
+    background:#000;
+    user-select:none;
+}
 #viewer { width:100vw; height:100vh; }
+#instructionOverlay {
+    position:fixed; top:0; left:0; width:100vw; height:100vh;
+    background: rgba(0,0,0,0.65);
+    color:#ccc;
+    display:flex; justify-content:center; align-items:center;
+    text-align:center; font-size:16px;
+    padding:20px; cursor:pointer; z-index:10;
+}
+#footerBar {
+    position:fixed; bottom:0; left:0; width:100%;
+    height:18px;
+    backdrop-filter: blur(8px);
+    background: rgba(40,40,40,0.45);
+    color:#ccc;
+    font-size:12px;
+    display:flex; align-items:center; justify-content:center;
+    pointer-events:none; user-select:none;
+}
 </style>
 </head>
 <body>
 
 <div id="viewer"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.js"></script>
+<div id="instructionOverlay">
+    <div>
+        <p>Controls:<br>- Drag with mouse/finger to rotate.<br>- Scroll/pinch to zoom.<br><br><b>Click to dismiss.</b></p>
+    </div>
+</div>
+
+<div id="footerBar">Loading...</div>
+
+<!-- Immediately load LICENSE -->
 <script>
-// Initialize Photo Sphere Viewer with official panorama
-const viewer = new PhotoSphereViewer.Viewer({
-    container: document.getElementById('viewer'),
-    panorama: 'https://photo-sphere-viewer.js.org/assets/sphere.jpg', // hosted online
-    defaultYaw: 0,
-    navbar: ['zoom', 'fullscreen'],
-    mousewheel: true,
-    touchmoveTwoFingers: true
-});
+const footerBar = document.getElementById('footerBar');
+fetch('LICENSE')
+    .then(r => {
+        if (!r.ok) throw new Error('Not found');
+        return r.text();
+    })
+    .then(txt => footerBar.textContent = txt)
+    .catch(() => footerBar.textContent = '© 2025. Do not distribute.');
 </script>
 
-</body>
-</html>
+<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.js"></script>
+
+<script>
+// Instructions overlay
+const overlay = document.getElementById('instructionOverlay');
+overlay.onclick = ()=>overlay.style.display='none';
+
+// Initialize Photo Sphere Viewer
+const viewer =
