--- a/index.html
+++ b/index.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>360 Test</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.css">
+<meta charset="UTF-8" />
+<title>360 Viewer</title>
+
+<!-- Photo Sphere Viewer v3 (script-tag compatible) -->
+<link rel="stylesheet" href="https://unpkg.com/photo-sphere-viewer@3.6.0/dist/photo-sphere-viewer.min.css">
+<script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
+<script src="https://unpkg.com/uevent@2.1.0/browser.min.js"></script>
+<script src="https://unpkg.com/dot/doT.min.js"></script>
+<script src="https://unpkg.com/photo-sphere-viewer@3.6.0/dist/photo-sphere-viewer.min.js"></script>
+
 <style>
     html, body {
-        margin:0;
-        padding:0;
-        background:black;
-        width:100%;
-        height:100%;
-        overflow:hidden;
-        user-select:none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: #000;
+        user-select: none;
     }
     #viewer {
-        width:100vw;
-        height:100vh;
+        width: 100vw;
+        height: 100vh;
     }
 </style>
+
 </head>
 <body>
 
 <div id="viewer"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.js"></script>
-
 <script>
-// Using CDN proxy with your repo
-const panoramaURL =
-  "https://cdn.jsdelivr.net/gh/LexDomitor/2025_Roadtrip_360pics/halfmoonbay4k360.jpg";
+// ✔ Load your panorama directly from GitHub Pages
+const pano = "https://lexdomitor.github.io/2025_Roadtrip_360pics/halfmoonbay4k360.jpg";
 
-console.log("Loading panorama via CDN proxy:", panoramaURL);
+// Test if image loads
+const testImg = new Image();
+testImg.crossOrigin = "anonymous";
 
-const img = new Image();
-img.crossOrigin = "anonymous";
-img.onload = function () {
-    console.log("Image loaded via proxy OK. Initializing viewer.");
-    new PhotoSphereViewer.Viewer({
-        container: document.getElementById('viewer'),
-        panorama: panoramaURL,
-        navbar: ['zoom', 'fullscreen'],
-        defaultYaw: 0,
-        mousewheel: true
+testImg.onload = function () {
+    console.log("Image OK — launching PSV v3");
+
+    const viewer = new PhotoSphereViewer({
+        panorama: pano,
+        container: document.getElementById("viewer"),
+        caption: "360 Viewer",
+        loadingImg: null,
+        defaultFov: 70,
+        mousewheel: true,
+        navbar: [
+            'autorotate',
+            'zoom',
+            'fullscreen'
+        ]
     });
 };
 
-img.onerror = function () {
-    console.error("Failed to load image via proxy. Check filename + path.");
+testImg.onerror = function () {
+    console.error("ERROR — The image cannot load.");
     document.body.innerHTML =
-      "<div style='color:white;text-align:center;margin-top:40px;font-size:20px;'>Image failed to load via CDN.<br>Check console.</div>";
+      "<div style='color:white;text-align:center;margin-top:40px;font-size:20px;'>Failed to load the panorama image.<br>Check the filename and path.</div>";
 };
 
-img.src = panoramaURL;
+testImg.src = pano;
 </script>
 
 </body>
