--- a/index.html
+++ b/index.html
@@ -5,43 +5,22 @@
 <title>360 Viewer</title>
 <link rel="stylesheet" href="photo-sphere-viewer.min.css">
 <style>
-    html, body {
-        margin:0;
-        padding:0;
-        width:100%;
-        height:100%;
-        background:black;
-        overflow:hidden;
-        user-select:none;
-    }
-    #viewer { width:100%; height:100%; }
+html, body { margin:0; padding:0; width:100%; height:100%; background:#000; overflow:hidden; }
+#viewer { width:100%; height:100%; }
 </style>
 </head>
 <body>
-
 <div id="viewer"></div>
 
 <script src="photo-sphere-viewer.min.js"></script>
-
 <script>
-const pano = "halfmoonbay4k360.jpg";
-
-const img = new Image();
-img.onload = function() {
-    new PhotoSphereViewer({
-        container: document.getElementById("viewer"),
-        panorama: pano,
-        navbar: ['zoom','fullscreen'],
-        defaultFov: 70,
-        mousewheel: true
-    });
-};
-img.onerror = function() {
-    document.body.innerHTML =
-      "<div style='color:white;text-align:center;margin-top:40px;font-size:20px;'>Failed to load panorama.<br>Check filename.</div>";
-};
-img.src = pano;
+new PhotoSphereViewer({
+  container: document.getElementById('viewer'),
+  panorama: 'halfmoonbay4k360.jpg',
+  navbar: ['zoom','fullscreen'],
+  defaultFov: 70,
+  mousewheel: true
+});
 </script>
-
 </body>
 </html>
