--- a/index.html
+++ b/index.html
@@ -52,18 +52,29 @@
       align-items: center;
       justify-content: center;
       z-index: 20;
-      user-select: none; /* prevent text selection */
+      user-select: none;
       cursor: default;
+      opacity: 1;
+      transition: opacity 0.5s ease; /* smooth fade */
     }
 
     #overlay-content {
       background: rgba(255, 255, 255, 0.2);
       backdrop-filter: blur(10px);
-      padding: 50px 60px; /* slightly bigger box */
+      padding: 60px 70px; /* slightly bigger box */
       border-radius: 20px;
       color: #fff;
       max-width: 600px;
       text-align: center;
+    }
+
+    #overlay-content a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    #overlay-content a:hover {
+      color: #ffcc00;
     }
   </style>
 </head>
@@ -75,6 +86,9 @@
   <!-- Frosted glass overlay with controls -->
   <div id="overlay">
     <div id="overlay-content">
+      <p>
+        Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP. If you would like to learn more about me <a href="https://linktr.ee/lexofdystopia" target="_blank">here</a>.
+      </p>
       <h2>360° Panorama Controls</h2>
       <p>
         Click and drag to look around.<br>
@@ -101,9 +115,13 @@
       "hfov": 100
     });
 
-    // Dismiss overlay when anywhere is clicked
-    document.getElementById('overlay').addEventListener('click', () => {
-      document.getElementById('overlay').style.display = 'none';
+    // Smooth fade out when overlay is clicked
+    const overlay = document.getElementById('overlay');
+    overlay.addEventListener('click', () => {
+      overlay.style.opacity = '0';
+      setTimeout(() => {
+        overlay.style.display = 'none';
+      }, 500); // matches transition
     });
 
     // Load LICENSE text dynamically from root directory
