--- a/index.html
+++ b/index.html
@@ -1,90 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>360 Viewer</title>
-<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
-<style>
-body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#000; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
-#footerBar { position: fixed; bottom:0; left:0; width:100%; height:18px; backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc; font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; white-space: pre-wrap; user-select: none; }
-#instructionOverlay { position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65); color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center; font-size:16px; padding:20px; cursor:pointer; z-index:10; display:none; user-select: none; }
-#loadingOverlay { position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.85); color:#ccc; display:flex; justify-content:center; align-items:center; font-size:18px; z-index:20; flex-direction: column; user-select: none; }
-</style>
+  <meta charset="UTF-8">
+  <title>360° Panorama - Half Moon Bay</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Saira', sans-serif;
+      overflow: hidden;
+      position: relative;
+    }
+
+    /* Panorama container */
+    #panorama {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      z-index: 0;
+    }
+
+    /* Frosted glass bar at bottom */
+    #license-bar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      color: #fff;
+      padding: 10px 20px;
+      font-size: 14px;
+      z-index: 10;
+      overflow-x: auto;
+      white-space: nowrap;
+    }
+
+    /* Centered overlay for controls */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.4); /* darken background */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 20;
+    }
+
+    #overlay-content {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      padding: 30px 40px;
+      border-radius: 20px;
+      color: #fff;
+      max-width: 500px;
+      text-align: center;
+      pointer-events: auto; /* allow clicks inside the box */
+    }
+
+    #overlay-content button {
+      margin-top: 15px;
+      background: rgba(255, 255, 255, 0.3);
+      border: none;
+      padding: 8px 16px;
+      border-radius: 12px;
+      color: #fff;
+      font-family: 'Saira', sans-serif;
+      cursor: pointer;
+    }
+
+    #overlay-content button:hover {
+      background: rgba(255, 255, 255, 0.5);
+    }
+  </style>
 </head>
 <body>
 
-<div id="instructionOverlay">
-    <div>
-        <p>Controls:<br>
-        - Drag with mouse or finger to rotate.<br>
-        - Scroll or pinch to zoom.<br><br>
-        <b>Click this message to dismiss it.</b></p>
+  <!-- Panorama container -->
+  <div id="panorama"></div>
+
+  <!-- Frosted glass overlay with controls -->
+  <div id="overlay">
+    <div id="overlay-content">
+      <h2>360° Panorama Controls</h2>
+      <p>
+        Click and drag to look around.<br>
+        Scroll to zoom in/out.<br>
+        Use fullscreen button for best experience.
+      </p>
+      <button id="dismiss-btn">Click here to dismiss this message</button>
     </div>
-</div>
+  </div>
 
-<div id="loadingOverlay">Loading image...</div>
-<div id="footerBar">Loading...</div>
+  <!-- Bottom frosted glass license bar -->
+  <div id="license-bar">Loading license...</div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.js"></script>
-<script>
-const loadingOverlay = document.getElementById('loadingOverlay');
-const overlay = document.getElementById('instructionOverlay');
-const footerBar = document.getElementById('footerBar');
+  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+  <script>
+    // Initialize panorama
+    const viewer = pannellum.viewer('panorama', {
+      "type": "equirectangular",
+      "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
+      "autoLoad": true,
+      "compass": false,
+      "showZoomCtrl": true,
+      "showFullscreenCtrl": true,
+      "hfov": 100
+    });
 
-// === Scene setup ===
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+    // Dismiss overlay
+    document.getElementById('dismiss-btn').addEventListener('click', () => {
+      document.getElementById('overlay').style.display = 'none';
+    });
 
-const controls = new THREE.OrbitControls(camera, renderer.domElement);
-controls.enableZoom = true;
-controls.enablePan = false;
-controls.rotateSpeed = 0.3;
-camera.position.set(0,0,0.1);
-controls.target.set(0,0,0);
-controls.update();
-
-let sphereGeo = new THREE.SphereGeometry(500, 60, 40);
-sphereGeo.scale(-1,1,1);
-let sphereMat, sphereMesh;
-
-// === Load single image ===
-const imagePath = 'CAM_20251114123835_0045_D.JPG';
-const loader = new THREE.TextureLoader();
-loader.load(imagePath, tex=>{
-    tex.minFilter = THREE.LinearFilter;
-    sphereMat = new THREE.MeshBasicMaterial({map: tex});
-    sphereMesh = new THREE.Mesh(sphereGeo, sphereMat);
-    scene.add(sphereMesh);
-
-    loadingOverlay.style.display='none';
-    overlay.style.display='flex';
-
-    // Load LICENSE footer
-    fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(e=>footerBar.textContent='© 2025. Do not distribute.');
-
-}, undefined, err=>{
-    console.error('Error loading image', err);
-    loadingOverlay.textContent='No images were found on server.';
-    setTimeout(()=>loadingOverlay.style.display='none',3000);
-});
-
-// === Animation ===
-function animate(){ requestAnimationFrame(animate); renderer.render(scene, camera); }
-animate();
-
-function onWindowResize(){ camera.aspect = window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth, window.innerHeight); }
-window.addEventListener('resize', onWindowResize);
-
-// === Overlay dismiss ===
-overlay.onclick = ()=>overlay.style.display='none';
-
-// === Disable right-click ===
-document.addEventListener('contextmenu', function(e) { e.preventDefault(); });
-</script>
+    // Load LICENSE text dynamically from root directory
+    fetch('LICENSE')
+      .then(response => {
+        if (!response.ok) throw new Error('Could not load LICENSE file');
+        return response.text();
+      })
+      .then(text => {
+        document.getElementById('license-bar').textContent = text;
+      })
+      .catch(err => {
+        document.getElementById('license-bar').textContent = 'LICENSE file not found.';
+        console.error(err);
+      });
+  </script>
 
 </body>
 </html>
