--- a/index.html
+++ b/index.html
@@ -1,136 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>360° Panorama - Half Moon Bay</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Saira', sans-serif;
-      overflow: hidden;
-      position: relative;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>License Viewer</title>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #f5f5f5;
+  }
 
-    /* Panorama container */
-    #panorama {
-      width: 100vw;
-      height: 100vh;
-      position: relative;
-      z-index: 0;
-    }
+  #licenseText {
+    max-width: 80%;
+    white-space: pre-wrap; /* preserves line breaks from LICENSE file */
+    overflow-y: auto;
+  }
 
-    /* Frosted glass bar at bottom */
-    #license-bar {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(10px);
-      color: #fff;
-      padding: 10px 20px;
-      font-size: 14px;
-      z-index: 10;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    /* Centered overlay for controls */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.4); /* darken background */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 20;
-    }
-
-    #overlay-content {
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(10px);
-      padding: 30px 40px;
-      border-radius: 20px;
-      color: #fff;
-      max-width: 500px;
-      text-align: center;
-      pointer-events: auto; /* allow clicks inside the box */
-    }
-
-    #overlay-content button {
-      margin-top: 15px;
-      background: rgba(255, 255, 255, 0.3);
-      border: none;
-      padding: 8px 16px;
-      border-radius: 12px;
-      color: #fff;
-      font-family: 'Saira', sans-serif;
-      cursor: pointer;
-    }
-
-    #overlay-content button:hover {
-      background: rgba(255, 255, 255, 0.5);
-    }
-  </style>
+  #messageOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em; /* bigger message */
+    padding: 20px;
+    cursor: pointer; /* shows clickable */
+    z-index: 9999;
+  }
+</style>
 </head>
 <body>
 
-  <!-- Panorama container -->
-  <div id="panorama"></div>
+<div id="messageOverlay">
+  Click anywhere to continue
+</div>
 
-  <!-- Frosted glass overlay with controls -->
-  <div id="overlay">
-    <div id="overlay-content">
-      <h2>360° Panorama Controls</h2>
-      <p>
-        Click and drag to look around.<br>
-        Scroll to zoom in/out.<br>
-        Use fullscreen button for best experience.
-      </p>
-      <button id="dismiss-btn">Click here to dismiss this message</button>
-    </div>
-  </div>
+<div id="licenseText">
+  <!-- LICENSE content goes here -->
+  Loading license...
+</div>
 
-  <!-- Bottom frosted glass license bar -->
-  <div id="license-bar">Loading license...</div>
+<script>
+  const overlay = document.getElementById('messageOverlay');
+  overlay.addEventListener('click', () => {
+    overlay.style.display = 'none';
+  });
 
-  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
-  <script>
-    // Initialize panorama
-    const viewer = pannellum.viewer('panorama', {
-      "type": "equirectangular",
-      "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
-      "autoLoad": true,
-      "compass": false,
-      "showZoomCtrl": true,
-      "showFullscreenCtrl": true,
-      "hfov": 100
+  // Example: Load LICENSE text dynamically (optional)
+  fetch('LICENSE')
+    .then(response => response.text())
+    .then(text => {
+      document.getElementById('licenseText').textContent = text;
+    })
+    .catch(() => {
+      document.getElementById('licenseText').textContent = "Failed to load LICENSE.";
     });
-
-    // Dismiss overlay
-    document.getElementById('dismiss-btn').addEventListener('click', () => {
-      document.getElementById('overlay').style.display = 'none';
-    });
-
-    // Load LICENSE text dynamically from root directory
-    fetch('LICENSE')
-      .then(response => {
-        if (!response.ok) throw new Error('Could not load LICENSE file');
-        return response.text();
-      })
-      .then(text => {
-        document.getElementById('license-bar').textContent = text;
-      })
-      .catch(err => {
-        document.getElementById('license-bar').textContent = 'LICENSE file not found.';
-        console.error(err);
-      });
-  </script>
+</script>
 
 </body>
 </html>
