--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>License Viewer</title>
+<title>360 Panorama Viewer</title>
+<link rel="stylesheet" href="https://unpkg.com/photo-sphere-viewer@5/dist/photo-sphere-viewer.css">
 <style>
-  body, html {
+  html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: #f5f5f5;
+    overflow: hidden;
   }
 
-  #licenseText {
-    max-width: 80%;
-    white-space: pre-wrap; /* preserves line breaks from LICENSE file */
-    overflow-y: auto;
+  #viewer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   #messageOverlay {
@@ -34,31 +33,69 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em; /* bigger message */
+    font-size: 2em;
     padding: 20px;
-    cursor: pointer; /* shows clickable */
+    cursor: pointer;
     z-index: 9999;
+    transition: opacity 0.3s ease;
+  }
+
+  #messageOverlay.hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  #licenseText {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 80%;
+    max-height: 30%;
+    overflow-y: auto;
+    background: rgba(255,255,255,0.9);
+    padding: 10px;
+    font-size: 0.9em;
+    white-space: pre-wrap;
+    text-align: center;
+    z-index: 1000;
   }
 </style>
 </head>
 <body>
+
+<div id="viewer"></div>
 
 <div id="messageOverlay">
   Click anywhere to continue
 </div>
 
 <div id="licenseText">
-  <!-- LICENSE content goes here -->
   Loading license...
 </div>
 
+<script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
+<script src="https://unpkg.com/photo-sphere-viewer@5/dist/photo-sphere-viewer.js"></script>
 <script>
-  const overlay = document.getElementById('messageOverlay');
-  overlay.addEventListener('click', () => {
-    overlay.style.display = 'none';
+  // Initialize Photo Sphere Viewer
+  const viewer = new PhotoSphereViewer.Viewer({
+    container: document.getElementById('viewer'),
+    panorama: 'your-360-image.jpg', // replace with your image
+    navbar: ['zoom', 'fullscreen'],
+    defaultLat: 0,
+    defaultLong: 0,
+    mousewheel: true,
+    autorotateDelay: 5000, // start auto-rotation after 5s
+    autorotateSpeed: '0.5rpm'
   });
 
-  // Example: Load LICENSE text dynamically (optional)
+  // Overlay dismiss
+  const overlay = document.getElementById('messageOverlay');
+  overlay.addEventListener('click', () => {
+    overlay.classList.add('hidden');
+  });
+
+  // Load LICENSE text dynamically
   fetch('LICENSE')
     .then(response => response.text())
     .then(text => {
@@ -67,6 +104,17 @@
     .catch(() => {
       document.getElementById('licenseText').textContent = "Failed to load LICENSE.";
     });
+
+  // Example hotspot placement (bottom of the sphere)
+  viewer.addMarker({
+    id: 'manhattanBeach',
+    longitude: 0,        // adjust to proper coords
+    latitude: -Math.PI/2, // bottom of sphere
+    tooltip: 'Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area. The Ritz-Carlton can be seen on the distant cliffs. The coastal shores are lined with miles of golf courses.',
+    image: 'https://upload.wikimedia.org/wikipedia/commons/3/3c/Info_icon.svg', // example icon
+    width: 32,
+    height: 32
+  });
 </script>
 
 </body>
